// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ContactListItem > should render 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="relative last:!border-b-4 last:border-solid last:border-theme-secondary-200 last:dark:border-theme-secondary-800 css-1x4z4cy"
        data-testid="TableRow"
      >
        <td>
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 min-h-11 pl-6 rounded-l space-x-4 whitespace-nowrap"
          >
            <span
              class="text-sm font-semibold leading-[17px]"
              data-testid="ContactListItem__name"
            >
              <span
                class="no-ligatures css-9nx3be"
                data-testid="TruncateEnd"
              >
                Brian
              </span>
            </span>
          </div>
        </td>
        <td
          class=""
        >
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 min-h-11"
          >
            <span
              class="whitespace-nowrap text-sm font-semibold leading-[17px] text-theme-text"
            >
              ARK Devnet
            </span>
          </div>
        </td>
        <td
          class=""
          data-testid="ContactListItem__address"
        >
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 min-h-11 space-x-4"
          >
            <div
              class="w-0 flex-1"
            >
              <div
                class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
              >
                <div
                  class="relative grow leading-[17px] sm:leading-5 text-left"
                >
                  <span
                    class="no-ligatures min-w-0 overflow-hidden text-sm leading-[17px] font-semibold text-base absolute w-full"
                    data-testid="Address__address"
                  >
                    D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib
                  </span>
                  <span>
                     
                  </span>
                </div>
              </div>
            </div>
          </div>
        </td>
        <td
          class=""
        >
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 min-h-11 space-x-4 justify-center"
          >
            <button
              class="ring-focus relative focus:outline-none"
              data-ring-focus-margin="-m-1"
              data-testid="clipboard-icon__wrapper"
              type="button"
            >
              <div
                class="text-theme-primary-400 dark:text-theme-secondary-600"
              >
                <div
                  class="css-v0ob3f"
                  height="16"
                  width="16"
                >
                  <svg
                    id="copy"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    >
                      <path
                        d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                      />
                      <path
                        d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </td>
        <td
          class=""
        >
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 min-h-11 pr-6 rounded-r justify-end"
          >
            <div
              class="-mr-3 flex items-center"
            >
              <div
                data-testid="ContactListItem__send-button-wrapper"
              >
                <button
                  class="p-3 relative items-center inline-flex justify-center font-semibold text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded border-none text-sm leading-[17px] text-theme-primary-600 hover:text-theme-primary-700"
                  data-testid="ContactListItem__send-button"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Send
                  </div>
                </button>
              </div>
              <div
                class="height-[17px] !m-0 border-theme-secondary-300 dark:border-theme-secondary-800 css-1aie31u"
                type="vertical"
              />
              <div
                class="visible"
              >
                <div
                  aria-expanded="false"
                  aria-haspopup="dialog"
                  data-testid="dropdown__toggle"
                >
                  <button
                    class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded border-none text-theme-primary-300 hover:text-theme-primary-600"
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <div
                        class="text-theme-secondary-700 css-1i4b0eq"
                        height="20"
                        width="20"
                      >
                        <svg
                          fill="none"
                          viewBox="0 0 20 20"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <circle
                            cx="10.002"
                            cy="2.99609"
                            fill="currentColor"
                            r="2"
                            transform="rotate(90 10.002 2.99609)"
                          />
                          <circle
                            cx="10.002"
                            cy="9.99805"
                            fill="currentColor"
                            r="2"
                            transform="rotate(90 10.002 9.99805)"
                          />
                          <circle
                            cx="10.002"
                            cy="17"
                            fill="currentColor"
                            r="2"
                            transform="rotate(90 10.002 17)"
                          />
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`ContactListItem > should render as delegate 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="relative last:!border-b-4 last:border-solid last:border-theme-secondary-200 last:dark:border-theme-secondary-800 css-1x4z4cy"
        data-testid="TableRow"
      >
        <td>
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 min-h-11 pl-6 rounded-l space-x-4 whitespace-nowrap"
          >
            <span
              class="text-sm font-semibold leading-[17px]"
              data-testid="ContactListItem__name"
            >
              <span
                class="no-ligatures css-9nx3be"
                data-testid="TruncateEnd"
              >
                Caio
              </span>
            </span>
          </div>
        </td>
        <td
          class=""
        >
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 min-h-11"
          >
            <span
              class="whitespace-nowrap text-sm font-semibold leading-[17px] text-theme-text"
            >
              ARK Devnet
            </span>
          </div>
        </td>
        <td
          class=""
          data-testid="ContactListItem__address"
        >
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 min-h-11 space-x-4"
          >
            <div
              class="w-0 flex-1"
            >
              <div
                class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
              >
                <div
                  class="relative grow leading-[17px] sm:leading-5 text-left"
                >
                  <span
                    class="no-ligatures min-w-0 overflow-hidden text-sm leading-[17px] font-semibold text-base absolute w-full"
                    data-testid="Address__address"
                  >
                    id5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb
                  </span>
                  <span>
                     
                  </span>
                </div>
              </div>
            </div>
          </div>
        </td>
        <td
          class=""
        >
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 min-h-11 space-x-4 justify-center"
          >
            <button
              class="ring-focus relative focus:outline-none"
              data-ring-focus-margin="-m-1"
              data-testid="clipboard-icon__wrapper"
              type="button"
            >
              <div
                class="text-theme-primary-400 dark:text-theme-secondary-600"
              >
                <div
                  class="css-v0ob3f"
                  height="16"
                  width="16"
                >
                  <svg
                    id="copy"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    >
                      <path
                        d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                      />
                      <path
                        d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </td>
        <td
          class=""
        >
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 min-h-11 pr-6 rounded-r justify-end"
          >
            <div
              class="-mr-3 flex items-center"
            >
              <div
                data-testid="ContactListItem__send-button-wrapper"
              >
                <button
                  class="p-3 relative items-center inline-flex justify-center font-semibold text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded border-none text-sm leading-[17px] text-theme-primary-600 hover:text-theme-primary-700"
                  data-testid="ContactListItem__send-button"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Send
                  </div>
                </button>
              </div>
              <div
                class="height-[17px] !m-0 border-theme-secondary-300 dark:border-theme-secondary-800 css-1aie31u"
                type="vertical"
              />
              <div
                class="visible"
              >
                <div
                  aria-expanded="false"
                  aria-haspopup="dialog"
                  data-testid="dropdown__toggle"
                >
                  <button
                    class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded border-none text-theme-primary-300 hover:text-theme-primary-600"
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <div
                        class="text-theme-secondary-700 css-1i4b0eq"
                        height="20"
                        width="20"
                      >
                        <svg
                          fill="none"
                          viewBox="0 0 20 20"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <circle
                            cx="10.002"
                            cy="2.99609"
                            fill="currentColor"
                            r="2"
                            transform="rotate(90 10.002 2.99609)"
                          />
                          <circle
                            cx="10.002"
                            cy="9.99805"
                            fill="currentColor"
                            r="2"
                            transform="rotate(90 10.002 9.99805)"
                          />
                          <circle
                            cx="10.002"
                            cy="17"
                            fill="currentColor"
                            r="2"
                            transform="rotate(90 10.002 17)"
                          />
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`ContactListItem > should render options 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="relative last:!border-b-4 last:border-solid last:border-theme-secondary-200 last:dark:border-theme-secondary-800 css-zmf0ow"
        data-testid="TableRow"
      >
        <td>
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 min-h-11 pl-6 rounded-l space-x-4 whitespace-nowrap"
          >
            <span
              class="text-sm font-semibold leading-[17px]"
              data-testid="ContactListItem__name"
            >
              <span
                class="no-ligatures css-9nx3be"
                data-testid="TruncateEnd"
              >
                Brian
              </span>
            </span>
          </div>
        </td>
        <td
          class="border-b border-dashed border-theme-secondary-300 dark:border-theme-secondary-800"
        >
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 min-h-11"
          >
            <span
              class="whitespace-nowrap text-sm font-semibold leading-[17px] text-theme-text"
            >
              ARK Devnet
            </span>
          </div>
        </td>
        <td
          class="border-b border-dashed border-theme-secondary-300 dark:border-theme-secondary-800"
          data-testid="ContactListItem__address"
        >
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 min-h-11 space-x-4"
          >
            <div
              class="w-0 flex-1"
            >
              <div
                class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
              >
                <div
                  class="relative grow leading-[17px] sm:leading-5 text-left"
                >
                  <span
                    class="no-ligatures min-w-0 overflow-hidden text-sm leading-[17px] font-semibold text-base absolute w-full"
                    data-testid="Address__address"
                  >
                    D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib
                  </span>
                  <span>
                     
                  </span>
                </div>
              </div>
            </div>
          </div>
        </td>
        <td
          class="border-b border-dashed border-theme-secondary-300 dark:border-theme-secondary-800"
        >
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 min-h-11 space-x-4 justify-center"
          >
            <button
              class="ring-focus relative focus:outline-none"
              data-ring-focus-margin="-m-1"
              data-testid="clipboard-icon__wrapper"
              type="button"
            >
              <div
                class="text-theme-primary-400 dark:text-theme-secondary-600"
              >
                <div
                  class="css-v0ob3f"
                  height="16"
                  width="16"
                >
                  <svg
                    id="copy"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    >
                      <path
                        d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                      />
                      <path
                        d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </td>
        <td
          class="border-b border-dashed border-theme-secondary-300 dark:border-theme-secondary-800"
        >
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 min-h-11 pr-6 rounded-r justify-end"
          >
            <div
              class="-mr-3 flex items-center"
            >
              <div
                data-testid="ContactListItem__send-button-wrapper"
              >
                <button
                  class="p-3 relative items-center inline-flex justify-center font-semibold text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded border-none text-sm leading-[17px] text-theme-primary-600 hover:text-theme-primary-700"
                  data-testid="ContactListItem__send-button"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Send
                  </div>
                </button>
              </div>
              <div
                class="height-[17px] !m-0 border-theme-secondary-300 dark:border-theme-secondary-800 css-1aie31u"
                type="vertical"
              />
              <div
                class="visible"
              >
                <div
                  aria-expanded="false"
                  aria-haspopup="dialog"
                  data-testid="dropdown__toggle"
                >
                  <button
                    class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded border-none text-theme-primary-300 hover:text-theme-primary-600"
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <div
                        class="text-theme-secondary-700 css-1i4b0eq"
                        height="20"
                        width="20"
                      >
                        <svg
                          fill="none"
                          viewBox="0 0 20 20"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <circle
                            cx="10.002"
                            cy="2.99609"
                            fill="currentColor"
                            r="2"
                            transform="rotate(90 10.002 2.99609)"
                          />
                          <circle
                            cx="10.002"
                            cy="9.99805"
                            fill="currentColor"
                            r="2"
                            transform="rotate(90 10.002 9.99805)"
                          />
                          <circle
                            cx="10.002"
                            cy="17"
                            fill="currentColor"
                            r="2"
                            transform="rotate(90 10.002 17)"
                          />
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </td>
      </tr>
      <tr
        class="relative last:!border-b-4 last:border-solid last:border-theme-secondary-200 last:dark:border-theme-secondary-800 css-zmf0ow"
        data-testid="TableRow"
      >
        <td>
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 min-h-11 pl-6 rounded-l space-x-4 whitespace-nowrap"
          />
        </td>
        <td
          class="border-b border-dashed border-theme-secondary-300 dark:border-theme-secondary-800"
        >
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 min-h-11"
          >
            <span
              class="whitespace-nowrap text-sm font-semibold leading-[17px] text-theme-text"
            >
              ARK Devnet
            </span>
          </div>
        </td>
        <td
          class="border-b border-dashed border-theme-secondary-300 dark:border-theme-secondary-800"
          data-testid="ContactListItem__address"
        >
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 min-h-11 space-x-4"
          >
            <div
              class="w-0 flex-1"
            >
              <div
                class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
              >
                <div
                  class="relative grow leading-[17px] sm:leading-5 text-left"
                >
                  <span
                    class="no-ligatures min-w-0 overflow-hidden text-sm leading-[17px] font-semibold text-base absolute w-full"
                    data-testid="Address__address"
                  >
                    D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib
                  </span>
                  <span>
                     
                  </span>
                </div>
              </div>
            </div>
          </div>
        </td>
        <td
          class="border-b border-dashed border-theme-secondary-300 dark:border-theme-secondary-800"
        >
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 min-h-11 space-x-4 justify-center"
          >
            <button
              class="ring-focus relative focus:outline-none"
              data-ring-focus-margin="-m-1"
              data-testid="clipboard-icon__wrapper"
              type="button"
            >
              <div
                class="text-theme-primary-400 dark:text-theme-secondary-600"
              >
                <div
                  class="css-v0ob3f"
                  height="16"
                  width="16"
                >
                  <svg
                    id="copy"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    >
                      <path
                        d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                      />
                      <path
                        d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </td>
        <td
          class="border-b border-dashed border-theme-secondary-300 dark:border-theme-secondary-800"
        >
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 min-h-11 pr-6 rounded-r justify-end"
          >
            <div
              class="-mr-3 flex items-center"
            >
              <div
                data-testid="ContactListItem__send-button-wrapper"
              >
                <button
                  class="p-3 relative items-center inline-flex justify-center font-semibold text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded border-none text-sm leading-[17px] text-theme-primary-600 hover:text-theme-primary-700"
                  data-testid="ContactListItem__send-button"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Send
                  </div>
                </button>
              </div>
              <div
                class="invisible"
              >
                <div
                  aria-expanded="false"
                  aria-haspopup="dialog"
                  data-testid="dropdown__toggle"
                >
                  <button
                    class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded border-none text-theme-primary-300 hover:text-theme-primary-600"
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <div
                        class="text-theme-secondary-700 css-1i4b0eq"
                        height="20"
                        width="20"
                      >
                        <svg
                          fill="none"
                          viewBox="0 0 20 20"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <circle
                            cx="10.002"
                            cy="2.99609"
                            fill="currentColor"
                            r="2"
                            transform="rotate(90 10.002 2.99609)"
                          />
                          <circle
                            cx="10.002"
                            cy="9.99805"
                            fill="currentColor"
                            r="2"
                            transform="rotate(90 10.002 9.99805)"
                          />
                          <circle
                            cx="10.002"
                            cy="17"
                            fill="currentColor"
                            r="2"
                            transform="rotate(90 10.002 17)"
                          />
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </td>
      </tr>
      <tr
        class="relative last:!border-b-4 last:border-solid last:border-theme-secondary-200 last:dark:border-theme-secondary-800 css-1x4z4cy"
        data-testid="TableRow"
      >
        <td>
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 min-h-11 pl-6 rounded-l space-x-4 whitespace-nowrap"
          />
        </td>
        <td
          class=""
        >
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 min-h-11"
          >
            <span
              class="whitespace-nowrap text-sm font-semibold leading-[17px] text-theme-text"
            >
              ARK Devnet
            </span>
          </div>
        </td>
        <td
          class=""
          data-testid="ContactListItem__address"
        >
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 min-h-11 space-x-4"
          >
            <div
              class="w-0 flex-1"
            >
              <div
                class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
              >
                <div
                  class="relative grow leading-[17px] sm:leading-5 text-left"
                >
                  <span
                    class="no-ligatures min-w-0 overflow-hidden text-sm leading-[17px] font-semibold text-base absolute w-full"
                    data-testid="Address__address"
                  >
                    DKrACQw7ytoU2gjppy3qKeE2dQhZjfXYqu
                  </span>
                  <span>
                     
                  </span>
                </div>
              </div>
            </div>
          </div>
        </td>
        <td
          class=""
        >
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 min-h-11 space-x-4 justify-center"
          >
            <button
              class="ring-focus relative focus:outline-none"
              data-ring-focus-margin="-m-1"
              data-testid="clipboard-icon__wrapper"
              type="button"
            >
              <div
                class="text-theme-primary-400 dark:text-theme-secondary-600"
              >
                <div
                  class="css-v0ob3f"
                  height="16"
                  width="16"
                >
                  <svg
                    id="copy"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    >
                      <path
                        d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                      />
                      <path
                        d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </td>
        <td
          class=""
        >
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 min-h-11 pr-6 rounded-r justify-end"
          >
            <div
              class="-mr-3 flex items-center"
            >
              <div
                data-testid="ContactListItem__send-button-wrapper"
              >
                <button
                  class="p-3 relative items-center inline-flex justify-center font-semibold text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded border-none text-sm leading-[17px] text-theme-primary-600 hover:text-theme-primary-700"
                  data-testid="ContactListItem__send-button"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Send
                  </div>
                </button>
              </div>
              <div
                class="invisible"
              >
                <div
                  aria-expanded="false"
                  aria-haspopup="dialog"
                  data-testid="dropdown__toggle"
                >
                  <button
                    class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded border-none text-theme-primary-300 hover:text-theme-primary-600"
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <div
                        class="text-theme-secondary-700 css-1i4b0eq"
                        height="20"
                        width="20"
                      >
                        <svg
                          fill="none"
                          viewBox="0 0 20 20"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <circle
                            cx="10.002"
                            cy="2.99609"
                            fill="currentColor"
                            r="2"
                            transform="rotate(90 10.002 2.99609)"
                          />
                          <circle
                            cx="10.002"
                            cy="9.99805"
                            fill="currentColor"
                            r="2"
                            transform="rotate(90 10.002 9.99805)"
                          />
                          <circle
                            cx="10.002"
                            cy="17"
                            fill="currentColor"
                            r="2"
                            transform="rotate(90 10.002 17)"
                          />
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`ContactListItem > should render with multiple addresses 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="relative last:!border-b-4 last:border-solid last:border-theme-secondary-200 last:dark:border-theme-secondary-800 css-zmf0ow"
        data-testid="TableRow"
      >
        <td>
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 min-h-11 pl-6 rounded-l space-x-4 whitespace-nowrap"
          >
            <span
              class="text-sm font-semibold leading-[17px]"
              data-testid="ContactListItem__name"
            >
              <span
                class="no-ligatures css-9nx3be"
                data-testid="TruncateEnd"
              >
                Brian
              </span>
            </span>
          </div>
        </td>
        <td
          class="border-b border-dashed border-theme-secondary-300 dark:border-theme-secondary-800"
        >
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 min-h-11"
          >
            <span
              class="whitespace-nowrap text-sm font-semibold leading-[17px] text-theme-text"
            >
              ARK Devnet
            </span>
          </div>
        </td>
        <td
          class="border-b border-dashed border-theme-secondary-300 dark:border-theme-secondary-800"
          data-testid="ContactListItem__address"
        >
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 min-h-11 space-x-4"
          >
            <div
              class="w-0 flex-1"
            >
              <div
                class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
              >
                <div
                  class="relative grow leading-[17px] sm:leading-5 text-left"
                >
                  <span
                    class="no-ligatures min-w-0 overflow-hidden text-sm leading-[17px] font-semibold text-base absolute w-full"
                    data-testid="Address__address"
                  >
                    D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib
                  </span>
                  <span>
                     
                  </span>
                </div>
              </div>
            </div>
          </div>
        </td>
        <td
          class="border-b border-dashed border-theme-secondary-300 dark:border-theme-secondary-800"
        >
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 min-h-11 space-x-4 justify-center"
          >
            <button
              class="ring-focus relative focus:outline-none"
              data-ring-focus-margin="-m-1"
              data-testid="clipboard-icon__wrapper"
              type="button"
            >
              <div
                class="text-theme-primary-400 dark:text-theme-secondary-600"
              >
                <div
                  class="css-v0ob3f"
                  height="16"
                  width="16"
                >
                  <svg
                    id="copy"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    >
                      <path
                        d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                      />
                      <path
                        d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </td>
        <td
          class="border-b border-dashed border-theme-secondary-300 dark:border-theme-secondary-800"
        >
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 min-h-11 pr-6 rounded-r justify-end"
          >
            <div
              class="-mr-3 flex items-center"
            >
              <div
                data-testid="ContactListItem__send-button-wrapper"
              >
                <button
                  class="p-3 relative items-center inline-flex justify-center font-semibold text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded border-none text-sm leading-[17px] text-theme-primary-600 hover:text-theme-primary-700"
                  data-testid="ContactListItem__send-button"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Send
                  </div>
                </button>
              </div>
              <div
                class="height-[17px] !m-0 border-theme-secondary-300 dark:border-theme-secondary-800 css-1aie31u"
                type="vertical"
              />
              <div
                class="visible"
              >
                <div
                  aria-expanded="false"
                  aria-haspopup="dialog"
                  data-testid="dropdown__toggle"
                >
                  <button
                    class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded border-none text-theme-primary-300 hover:text-theme-primary-600"
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <div
                        class="text-theme-secondary-700 css-1i4b0eq"
                        height="20"
                        width="20"
                      >
                        <svg
                          fill="none"
                          viewBox="0 0 20 20"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <circle
                            cx="10.002"
                            cy="2.99609"
                            fill="currentColor"
                            r="2"
                            transform="rotate(90 10.002 2.99609)"
                          />
                          <circle
                            cx="10.002"
                            cy="9.99805"
                            fill="currentColor"
                            r="2"
                            transform="rotate(90 10.002 9.99805)"
                          />
                          <circle
                            cx="10.002"
                            cy="17"
                            fill="currentColor"
                            r="2"
                            transform="rotate(90 10.002 17)"
                          />
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </td>
      </tr>
      <tr
        class="relative last:!border-b-4 last:border-solid last:border-theme-secondary-200 last:dark:border-theme-secondary-800 css-zmf0ow"
        data-testid="TableRow"
      >
        <td>
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 min-h-11 pl-6 rounded-l space-x-4 whitespace-nowrap"
          />
        </td>
        <td
          class="border-b border-dashed border-theme-secondary-300 dark:border-theme-secondary-800"
        >
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 min-h-11"
          >
            <span
              class="whitespace-nowrap text-sm font-semibold leading-[17px] text-theme-text"
            >
              ARK Devnet
            </span>
          </div>
        </td>
        <td
          class="border-b border-dashed border-theme-secondary-300 dark:border-theme-secondary-800"
          data-testid="ContactListItem__address"
        >
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 min-h-11 space-x-4"
          >
            <div
              class="w-0 flex-1"
            >
              <div
                class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
              >
                <div
                  class="relative grow leading-[17px] sm:leading-5 text-left"
                >
                  <span
                    class="no-ligatures min-w-0 overflow-hidden text-sm leading-[17px] font-semibold text-base absolute w-full"
                    data-testid="Address__address"
                  >
                    D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib
                  </span>
                  <span>
                     
                  </span>
                </div>
              </div>
            </div>
          </div>
        </td>
        <td
          class="border-b border-dashed border-theme-secondary-300 dark:border-theme-secondary-800"
        >
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 min-h-11 space-x-4 justify-center"
          >
            <button
              class="ring-focus relative focus:outline-none"
              data-ring-focus-margin="-m-1"
              data-testid="clipboard-icon__wrapper"
              type="button"
            >
              <div
                class="text-theme-primary-400 dark:text-theme-secondary-600"
              >
                <div
                  class="css-v0ob3f"
                  height="16"
                  width="16"
                >
                  <svg
                    id="copy"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    >
                      <path
                        d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                      />
                      <path
                        d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </td>
        <td
          class="border-b border-dashed border-theme-secondary-300 dark:border-theme-secondary-800"
        >
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 min-h-11 pr-6 rounded-r justify-end"
          >
            <div
              class="-mr-3 flex items-center"
            >
              <div
                data-testid="ContactListItem__send-button-wrapper"
              >
                <button
                  class="p-3 relative items-center inline-flex justify-center font-semibold text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded border-none text-sm leading-[17px] text-theme-primary-600 hover:text-theme-primary-700"
                  data-testid="ContactListItem__send-button"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Send
                  </div>
                </button>
              </div>
              <div
                class="invisible"
              >
                <div
                  aria-expanded="false"
                  aria-haspopup="dialog"
                  data-testid="dropdown__toggle"
                >
                  <button
                    class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded border-none text-theme-primary-300 hover:text-theme-primary-600"
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <div
                        class="text-theme-secondary-700 css-1i4b0eq"
                        height="20"
                        width="20"
                      >
                        <svg
                          fill="none"
                          viewBox="0 0 20 20"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <circle
                            cx="10.002"
                            cy="2.99609"
                            fill="currentColor"
                            r="2"
                            transform="rotate(90 10.002 2.99609)"
                          />
                          <circle
                            cx="10.002"
                            cy="9.99805"
                            fill="currentColor"
                            r="2"
                            transform="rotate(90 10.002 9.99805)"
                          />
                          <circle
                            cx="10.002"
                            cy="17"
                            fill="currentColor"
                            r="2"
                            transform="rotate(90 10.002 17)"
                          />
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </td>
      </tr>
      <tr
        class="relative last:!border-b-4 last:border-solid last:border-theme-secondary-200 last:dark:border-theme-secondary-800 css-1x4z4cy"
        data-testid="TableRow"
      >
        <td>
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 min-h-11 pl-6 rounded-l space-x-4 whitespace-nowrap"
          />
        </td>
        <td
          class=""
        >
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 min-h-11"
          >
            <span
              class="whitespace-nowrap text-sm font-semibold leading-[17px] text-theme-text"
            >
              ARK Devnet
            </span>
          </div>
        </td>
        <td
          class=""
          data-testid="ContactListItem__address"
        >
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 min-h-11 space-x-4"
          >
            <div
              class="w-0 flex-1"
            >
              <div
                class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
              >
                <div
                  class="relative grow leading-[17px] sm:leading-5 text-left"
                >
                  <span
                    class="no-ligatures min-w-0 overflow-hidden text-sm leading-[17px] font-semibold text-base absolute w-full"
                    data-testid="Address__address"
                  >
                    DKrACQw7ytoU2gjppy3qKeE2dQhZjfXYqu
                  </span>
                  <span>
                     
                  </span>
                </div>
              </div>
            </div>
          </div>
        </td>
        <td
          class=""
        >
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 min-h-11 space-x-4 justify-center"
          >
            <button
              class="ring-focus relative focus:outline-none"
              data-ring-focus-margin="-m-1"
              data-testid="clipboard-icon__wrapper"
              type="button"
            >
              <div
                class="text-theme-primary-400 dark:text-theme-secondary-600"
              >
                <div
                  class="css-v0ob3f"
                  height="16"
                  width="16"
                >
                  <svg
                    id="copy"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    >
                      <path
                        d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                      />
                      <path
                        d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </td>
        <td
          class=""
        >
          <div
            class="flex px-3 items-center my-1 transition-colors duration-100 min-h-11 pr-6 rounded-r justify-end"
          >
            <div
              class="-mr-3 flex items-center"
            >
              <div
                data-testid="ContactListItem__send-button-wrapper"
              >
                <button
                  class="p-3 relative items-center inline-flex justify-center font-semibold text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded border-none text-sm leading-[17px] text-theme-primary-600 hover:text-theme-primary-700"
                  data-testid="ContactListItem__send-button"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Send
                  </div>
                </button>
              </div>
              <div
                class="invisible"
              >
                <div
                  aria-expanded="false"
                  aria-haspopup="dialog"
                  data-testid="dropdown__toggle"
                >
                  <button
                    class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded border-none text-theme-primary-300 hover:text-theme-primary-600"
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <div
                        class="text-theme-secondary-700 css-1i4b0eq"
                        height="20"
                        width="20"
                      >
                        <svg
                          fill="none"
                          viewBox="0 0 20 20"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <circle
                            cx="10.002"
                            cy="2.99609"
                            fill="currentColor"
                            r="2"
                            transform="rotate(90 10.002 2.99609)"
                          />
                          <circle
                            cx="10.002"
                            cy="9.99805"
                            fill="currentColor"
                            r="2"
                            transform="rotate(90 10.002 9.99805)"
                          />
                          <circle
                            cx="10.002"
                            cy="17"
                            fill="currentColor"
                            r="2"
                            transform="rotate(90 10.002 17)"
                          />
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
